<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>at.pcgamingfreaks</groupId>
	<artifactId>PluginLib</artifactId>
	<version>1.0.5-SNAPSHOT</version>
	<packaging>jar</packaging>

	<scm>
		<connection>scm:git:git@github.com:GeorgH93/Bukkit_Bungee_PluginLib.git</connection>
		<developerConnection>scm:git:git@github.com:GeorgH93/Bukkit_Bungee_PluginLib.git</developerConnection>
		<url>git@github.com:GeorgH93/Bukkit_Bungee_PluginLib.git</url>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/GeorgH93/Bukkit_Bungee_PluginLib/issues</url>
	</issueManagement>
	<ciManagement>
		<system>jenkins</system>
		<url>https://ci.pcgamingfreaks.at/job/PluginLib/</url>
	</ciManagement>

	<name>PCGF MC PluginLib</name>
	<description>A library to reduce work and code on Bukkit or BungeeCord plugins.</description>
	<inceptionYear>2015</inceptionYear>
	<licenses>
		<license>
			<name>GNU General Public License (GPL) v3</name>
			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<powermockVersion>1.7.4</powermockVersion><!-- property so that we have to change only one value to update all the powermock dependencies -->
		<pluginName>PCGF_PluginLib</pluginName>
		<author>GeorgH93</author>
		<website>TODO</website>
		<maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
		<timestamp>${maven.build.timestamp}</timestamp>
	</properties>

	<repositories>
		<repository>
			<id>pcgf-repo</id>
			<url>https://repo.pcgamingfreaks.at/repository/everything/</url>
		</repository>
		<repository>
			<id>spigot-nexus</id>
			<url>https://hub.spigotmc.org/nexus/content/groups/public</url>
		</repository>
		<repository>
			<id>sonatype-snapshot</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</repository>
		<repository>
			<id>sonatype-release</id>
			<url>https://oss.sonatype.org/content/repositories/releases</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- jUnit for unit tests -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
			<optional>true</optional>
		</dependency>
		<!-- Mocking stuff -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>2.0.2-beta</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>${powermockVersion}</version>
			<exclusions>
				<exclusion>
					<groupId>org.powermock</groupId>
					<artifactId>powermock-core</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.powermock</groupId>
					<artifactId>powermock-reflect</artifactId>
				</exclusion>
			</exclusions>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito</artifactId>
			<version>${powermockVersion}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4-rule</artifactId>
			<version>${powermockVersion}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-classloading-xstream</artifactId>
			<version>${powermockVersion}</version>
			<scope>test</scope>
		</dependency>
		<!-- For better code documentation -->
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>15.0</version>
		</dependency>
		<!-- The YAML-Parser, it doesn't lose the comments in the yml file when it gets changed and saved -->
		<dependency>
			<groupId>at.pcgamingfreaks</groupId>
			<artifactId>YAML-Parser</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<!-- The JSON-Parser we use. It is included in BungeeCord, but we also want to use it on Bukkit -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.0</version>
		</dependency>
		<!-- Bukkit API -->
		<dependency>
			<groupId>org.bukkit</groupId>
			<artifactId>bukkit</artifactId>
			<version>1.12.2-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<!-- BungeeCord API -->
		<dependency>
			<groupId>net.md-5</groupId>
			<artifactId>bungeecord-api</artifactId>
			<version>1.12-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<!-- We use some of their classes for Validation and other things -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.4</version>
		</dependency>
		<!-- JDBC connection pool -->
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>2.4.1</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-jdk14</artifactId>
			<version>1.7.10</version>
		</dependency>
	</dependencies>

	<build>
		<defaultGoal>clean install test</defaultGoal>
		<resources>
			<resource>
				<directory>resources</directory>
				<filtering>true</filtering>
			</resource>
			<resource>
				<directory>./</directory>
				<includes>
					<include>LICENSE</include>
				</includes>
			</resource>
		</resources>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>test/src</testSourceDirectory>
		<testResources>
			<testResource>
				<directory>test/resources</directory>
			</testResource>
		</testResources>
		<plugins>
			<!-- Configures used Java version -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<!-- Shades some required libs into the final jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<minimizeJar>false</minimizeJar> <!-- We don't know what plugin authors will need so we can't minimize the jar. -->
							<artifactSet>
								<includes>
									<include>at.pcgamingfreaks:YAML-Parser</include>
									<include>com.google.code.gson:gson</include> <!-- Not included in Bukkit, we need it (a lot)! -->
									<include>org.apache.commons:commons-lang3</include> <!-- The old version is included in Bukkit, but not in BungeeCord, we just put in the new version for both -->
									<include>com.zaxxer:HikariCP</include>
									<include>org.slf4j:*</include>
								</includes>
							</artifactSet>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- Creates a jar with the sources (for maven repo) -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Creates a jar with the javadoc (for maven repo) -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<!-- Java 1.8 uses checks for the JavaDoc, we disable them on Java 1.8, but older Java version don't understand the parameter, so we have to use a small trick -->
							<additionalparam>${javadoc.opts}</additionalparam>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- Sets the working directory for the junit tests -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.7.2</version>
				<configuration>
					<workingDirectory>${java.io.tmpdir}</workingDirectory>
					<!--suppress MavenModelInspection -->
					<argLine>${permgen.args}</argLine>
				</configuration>
			</plugin>
			<!-- Creates the coverage report -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<formats>
						<format>xml</format>
						<format>html</format>
					</formats>
					<aggregate>true</aggregate>
					<instrumentation>
						<excludes>
							<!-- The plugin for Bukkit/BungeeCord should be ignored in the coverage report -->
							<exclude>at/pcgamingfreaks/PluginLib/**/*</exclude>
						</excludes>
					</instrumentation>
					<check/>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>cobertura</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Pushes the coverage report to coveralls -->
			<plugin>
				<groupId>org.eluder.coveralls</groupId>
				<artifactId>coveralls-maven-plugin</artifactId>
				<version>4.2.0</version>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>releases</id>
			<url>https://repo.pcgamingfreaks.at/repository/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<url>https://repo.pcgamingfreaks.at/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<profiles>
		<!-- Java 1.8 uses checks for the JavaDoc, we disable them on Java 1.8, but older Java version don't understand the parameter, so we have to use a small trick -->
		<profile>
			<id>doclint-java8-disable</id>
			<activation>
				<jdk>[1.8,)</jdk>
			</activation>
			<properties>
				<javadoc.opts>-Xdoclint:none</javadoc.opts>
			</properties>
		</profile>
		<!-- Java 1.7 ran out of space during tests, but Java 1.8 no longer needs this parameter, so we have to use a small trick -->
		<profile>
			<id>use-permgen-java7</id>
			<activation>
				<jdk>1.7</jdk>
			</activation>
			<properties>
				<permgen.args>-XX:MaxPermSize=256m</permgen.args>
			</properties>
		</profile>
	</profiles>
</project>
